# Piper-TTS-Trainer

./: .gitignore  0.12.1  0.29.0  1.15.0  1.17.0  5.15.0  =1.3.0  =10.0,16.0  =10.11.0  EXACT VERSIONS.txt  LICENSE.md  PIPER_TRAIN_INFO.md  README.md  README_GUI.md  README_normalize.md  Transcriptions.txt  WINDOWS_USERS_README.md  check_dependencies.sh  check_phonemize.py  config.json  config.py  config_cpu.json  download_checkpoints.sh  download_wheels.sh  export_dataset.sh  fix_backslash.py  fix_gradio.sh  fix_phonemize.py  fix_phonemize_install.sh  fix_phonemize_poetry.sh  gradio_app.py  gradio_interface.py  install EXACT VERSIONS.txt  install_espeak.sh  install_precompiled_phonemize.sh  install_wheel.sh  install_wsl.bat  install_wsl.ps1  launch.bat  launch_data_prep_gui.bat  (+39 more)
output/: config.json  dataset.jsonl
output/lightning_logs/version_2/: hparams.yaml
src/python/scripts/: setup.sh
