 [tool.poetry]
name = "piper-tts-trainer"
version = "1.0.0"
description = "GUI for training Piper TTS models following the guide at https://ssamjh.nz/create-custom-piper-tts-voice/"
authors = ["Piper TTS Team"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# PyTorch dependencies
torch = {version = "2.8.0.dev20250325+cu128", source = "torch_nightly"}
torchvision = {version = "0.22.0.dev20250325+cu128", source = "torch_nightly"}
torchaudio = {version = "2.6.0.dev20250325+cu128", source = "torch_nightly"}

# Core Piper training dependencies
cython = "0.29.36"
numpy = ">=1.26.0"
torchmetrics = "0.11.4"
pytorch-lightning = "2.0.6"
onnxruntime = ">=1.14.1,<2.0.0"
librosa = "0.9.2"
pybind11 = "*"
scipy = "*"
pytaglib = "*"
onnx = "*"
numba = "*"
wheel = "*"
setuptools = "*"
cmake = "*"
soundfile = "*"

# Dataset handling
matplotlib = "*"
requests = "*"
pandas = "*"
jiwer = "*"
unidecode = "*"

# For export functionality
onnxruntime-extensions = "*"

# GUI dependencies
gradio = "5.29.0"
gradio_client = "1.10.0"
httpx = ">=0.28.1"
aiofiles = ">=22.0,<25.0"
fastapi = ">=0.115.2,<1.0"
ffmpy = "*"
groovy = "~0.1"
huggingface-hub = ">=0.28.1"
orjson = "3.9.10"
python-dateutil = ">=2.8.2"
tzdata = ">=2022.7"
pytz = "*"
pydantic = "2.11.4"
pydantic-core = "2.33.2"
annotated-types = ">=0.6.0"
typing-inspection = ">=0.4.0"
pydub = "*"
python-multipart = ">=0.0.18"
ruff = ">=0.9.3"
safehttpx = ">=0.1.6,<0.2.0"
semantic-version = "~2.0"
starlette = ">=0.40.0,<1.0"
tomlkit = ">=0.12.0,<0.14.0"
typer = ">=0.12,<1.0"
rich = ">=10.11.0"
shellingham = ">=1.3.0"
uvicorn = ">=0.14.0"
websockets = ">=10.0,<16.0"
click = "*"
tqdm = "*"

# Piper phonemize installation - using direct wheel installation instead of local dependency
# piper_phonemize = {path = "piper/src/piper_phonemize", develop = true}

[tool.poetry.group.dev.dependencies]
# Development dependencies can be added here

[tool.poetry.scripts]
piper-trainer = "piper_trainer_gui:main"

# Disable the build-phonemize script for now to avoid dependency issues
# [tool.poetry.build]
# script = "build_phonemize.py"
# generate-setup-file = true

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch_nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
priority = "supplemental"

[build-system]
requires = ["poetry-core", "setuptools>=42", "wheel", "pybind11>=2.10.0", "cmake>=3.18"]
build-backend = "poetry.core.masonry.api"
